fix we-solve displaying on small screens

--- a/style/style.css
+++ b/style/style.css
@@ -1371,21 +1371,21 @@ footer {
     padding-bottom: 45px; }
   .we-solve .row {
     display: none; }
-    .we-solve .row .problems-slider .min-visible {
-      display: block;
-      text-align: center; }
-      .we-solve .row .problems-slider .min-visible p {
-        font-size: 22px;
-        color: #1CBC79; }
-      .we-solve .row .problems-slider .min-visible img {
-        margin: 15px; }
-    .we-solve .row .problems-slider > div {
-      display: block;
-      padding: 25px 0 0; }
-      .we-solve .row .problems-slider > div ul.list-points {
-        padding: 0 40px; }
-        .we-solve .row .problems-slider > div ul.list-points li {
-          font-size: 18px; }
+  .we-solve .problems-slider .min-visible {
+    display: block;
+    text-align: center; }
+    .we-solve .problems-slider .min-visible p {
+      font-size: 22px;
+      color: #1CBC79; }
+    .we-solve .problems-slider .min-visible img {
+      margin: 15px; }
+  .we-solve .problems-slider > div {
+    display: block;
+    padding: 25px 0 0; }
+    .we-solve .problems-slider > div ul.list-points {
+      padding: 0 40px; }
+      .we-solve .problems-slider > div ul.list-points li {
+        font-size: 18px; }
   .features .screen-slider-top div[class^="swiper-"] {
     height: auto !important;
     display: block !important;
